name:                andrewhn
version:             0.1.0.0
synopsis:            Blog
description:         Please see README.md
homepage:            https://andrewhn.github.io
license:             BSD3
license-file:        LICENSE
author:              Andrew Newnham
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable andrewhn
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       blaze-html,
                       filepath,
                       containers,
                       MissingH,
                       clay

library
  default-language:    Haskell2010
  other-modules:       Requires
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       blaze-html,
                       filepath,
                       containers
